adding AI to Bibliography

--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -124,23 +124,17 @@
     year = {2020}
 }
 
-% Beispiel für KI-generierte Inhalte
-@misc{KI_Assistant_2025_Analysis,
-	usera = {KI-generierte Inhalte},
-	author = {{AI Assistant}},
-	title = {Analyse und Verarbeitung von Forschungsdaten},
-	year = {2025},
-	month = {November},
-	note = {KI-Tool zur Unterstützung bei der Datenanalyse, Prompt siehe Anhang A.1},
-	keywords = {ai-generated}
-}
 
-@misc{KI_Assistant_2025_Code,
+% KI-generierte Quellen
+
+@misc{KI_Claude_2025_Taxonomie,
 	usera = {KI-generierte Inhalte},
-	author = {{AI Assistant}},
-	title = {Entwicklung eines Datenverarbeitungsskripts},
+	author = {{Anthropic Claude 4 Sonnet}},
+	title = {Erstellung einer tabellarischen Taxonomie-Übersicht für Literaturrecherche},
 	year = {2025},
-	month = {November},
-	note = {KI-Tool zur Code-Generierung, Prompt siehe Anhang A.2},
+	month = {August},
+	howpublished = {\url{claude.ai}},
+	note = {Generiert am 02.08.2025},
+	addendum = {Anthropic Claude 4 Sonnet},
 	keywords = {ai-generated}
 }
