- Addind Details on AI Promt usage and Bibligraphy - Adding Details on Correct AI Cite - Addin Open Todos

--- a/kapitel/anhang/ki_prompts.tex
+++ b/kapitel/anhang/ki_prompts.tex
@@ -3,7 +3,8 @@
 \addcontentsline{toc}{section}{Anhang A: Dokumentation der KI-Prompts}
 
 Im Rahmen dieser Arbeit wurden KI-Tools zur Unterstützung bei verschiedenen Aufgaben eingesetzt. Gemäß den Richtlinien der FOM Hochschule werden hier alle verwendeten Prompts transparent dokumentiert.
-
+% TODO
+\todo{Clear up Appendix Example with instructions from Discord}
 \subsection*{KI.1 KI-Assistent - Tabellenerstellung}
 \textbf{Verwendungszweck:} Erstellung einer strukturierten Tabelle zur Übersicht der Forschungsmethodik
 
