Add missing bibliography entries and improve AI citation structure
- Add 12 missing bibliography entries for all citations in kapitel_2.tex
- Include Tanenbaum, Beckert variants, Balzert books, and online sources
- Add label to KI.1 appendix section for proper referencing
- Update KI bibliography entry with simple text reference to appendix
- Fix compilation errors from undefined citations

--- a/kapitel/anhang/ki_prompts.tex
+++ b/kapitel/anhang/ki_prompts.tex
@@ -5,7 +5,7 @@
 Im Rahmen dieser Arbeit wurden KI-Tools zur Unterstützung bei verschiedenen Aufgaben eingesetzt. Gemäß den Richtlinien der FOM Hochschule werden hier alle verwendeten Prompts transparent dokumentiert.
 % TODO
 \todo{Clear up Appendix Example with instructions from Discord}
-\subsection*{KI.1 KI-Assistent - Tabellenerstellung}
+\subsection*{KI.1 KI-Assistent - Tabellenerstellung}\label{KI:1}
 \textbf{Verwendungszweck:} Erstellung einer strukturierten Tabelle zur Übersicht der Forschungsmethodik
 
 \textbf{Prompt:}
