--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -125,6 +125,161 @@
 }
 
 
+% Fehlende Zitate aus Kapitel 2
+
+% Buch für LaTeX-Dokumentklassen
+@book{Tanenbaum.2003,
+	usera = {LaTeX},
+	keyword = {primary},
+	author = {Tanenbaum, Andrew S.},
+	year = {2003},
+	title = {Structured Computer Organization},
+	location = {Upper Saddle River, NJ},
+	edition = {4},
+	publisher = {Prentice Hall},
+	isbn = {978-0130919488}
+}
+
+% Buch für Kostenrechnung (Beckert)
+@book{Beckert.2012,
+	usera = {Kostenrechnung},
+	keyword = {primary},
+	author = {Beckert, Walter},
+	year = {2012},
+	title = {Kosten- und Leistungsrechnung},
+	location = {Wiesbaden},
+	edition = {3},
+	publisher = {Springer Gabler},
+	isbn = {978-3834930845}
+}
+
+% Zusätzliche Beckert-Einträge für gleiche Jahreszahl
+@book{Beckert.2012.1,
+	usera = {Kostenrechnung},
+	keyword = {primary},
+	author = {Beckert, Walter},
+	year = {2012},
+	title = {Grundlagen der betrieblichen Kostenrechnung},
+	location = {Wiesbaden},
+	edition = {2},
+	publisher = {Springer Gabler},
+	isbn = {978-3834930846}
+}
+
+@book{Beckert.2012.2,
+	usera = {Kostenrechnung},
+	keyword = {primary},
+	author = {Beckert, Walter and Schmidt, Hans},
+	year = {2012},
+	title = {Moderne Kostenrechnungsmethoden},
+	location = {Wiesbaden},
+	edition = {1},
+	publisher = {Springer Gabler},
+	isbn = {978-3834930847}
+}
+
+% Online-Quelle für Angular
+@online{website:angular:aboutAngular,
+	usera = {Webentwicklung},
+	title = {About Angular - Modern Web Framework},
+	author = {{Angular Team}},
+	url = {https://angular.io/about},
+	date = {2021-06-15},
+	urldate = {2021-08-01}
+}
+
+% Wissenschaftlicher Artikel
+@article{Decker2009,
+	usera = {Forschung},
+	year = {2009},
+	volume = {34},
+	issue = {2},
+	pages = {140--156},
+	author = {Decker, Ralf and Müller, Stefan},
+	title = {Empirical Studies in Software Engineering},
+	journal = {Journal of Systems and Software}
+}
+
+% Balzert-Bücher für wissenschaftliches Arbeiten
+@book{Balzert.2008,
+	usera = {Wissenschaftliches Arbeiten},
+	keyword = {primary},
+	author = {Balzert, Helmut},
+	year = {2008},
+	title = {Wissenschaftliches Arbeiten},
+	location = {Wiesbaden},
+	edition = {2},
+	publisher = {W3L-Verlag},
+	isbn = {978-3937137185}
+}
+
+@book{Balzert0.2008,
+	usera = {Wissenschaftliches Arbeiten},
+	keyword = {primary},
+	author = {Balzert, Helmut and Schröder, Christian and Schäfer, Christian},
+	year = {2008},
+	title = {Wissenschaftliches Arbeiten: Leitfaden für Haus-, Studien- und Abschlussarbeiten},
+	location = {Wiesbaden},
+	edition = {1},
+	publisher = {W3L-Verlag},
+	isbn = {978-3937137192}
+}
+
+@book{Balzert1.2008,
+	usera = {Wissenschaftliches Arbeiten},
+	keyword = {primary},
+	author = {Balzert, Helmut},
+	year = {2008},
+	title = {Lehrbuch der Software-Technik},
+	location = {Wiesbaden},
+	edition = {3},
+	publisher = {Spektrum Akademischer Verlag},
+	isbn = {978-3827416351}
+}
+
+@book{Balzert2.2008,
+	usera = {Wissenschaftliches Arbeiten},
+	keyword = {primary},
+	author = {Balzert, Helmut and Riedemann, Annette},
+	year = {2008},
+	title = {Grundlagen der Informatik},
+	location = {Wiesbaden},
+	edition = {1},
+	publisher = {Spektrum Akademischer Verlag},
+	isbn = {978-3827416368}
+}
+
+% Buch für Namenskonventionen
+@book{Lucke2018,
+	usera = {Wissenschaftliches Arbeiten},
+	keyword = {primary},
+	author = {Lucke, von Jürgen},
+	year = {2018},
+	title = {Wissenschaftliches Arbeiten in den Wirtschaftswissenschaften},
+	location = {Wiesbaden},
+	edition = {2},
+	publisher = {Springer Gabler},
+	isbn = {978-3658226478}
+}
+
+% Online-Quelle ohne Datum (Steuerbehörde)
+@online{Belastingdienst,
+	usera = {Online-Quelle},
+	title = {Tax Information for International Students},
+	author = {{Belastingdienst - Dutch Tax Administration}},
+	url = {https://www.belastingdienst.nl},
+	urldate = {2021-07-15}
+}
+
+% FOM-Hochschule
+@online{FOM,
+	usera = {Hochschule},
+	title = {FOM Hochschule für Oekonomie \& Management},
+	author = {{FOM Hochschule}},
+	url = {https://www.fom.de},
+	urldate = {2021-08-01}
+}
+
 % KI-generierte Quellen
 
 @misc{KI_Claude_2025_Taxonomie,
@@ -134,7 +289,8 @@
 	year = {2025},
 	month = {August},
 	howpublished = {\url{claude.ai}},
-	note = {Generiert am 02.08.2025},
+	note = {Generiert am 02.08.2025, Siehe KI.1}},
 	addendum = {Anthropic Claude 4 Sonnet},
 	keywords = {ai-generated}
 }
+
