switch to IEEE Citation as Baseline for Template

--- a/kapitel/anhang/ki_prompts.tex
+++ b/kapitel/anhang/ki_prompts.tex
@@ -18,7 +18,7 @@ Im Rahmen dieser Arbeit wurden KI-Tools zur Unterstützung bei verschiedenen Auf
 \textit{- Datenerhebung: Systematische Literaturrecherche}
 \textit{- Analysemethoden: Inhaltanalyse und Statistik}
 \textit{- Zielgruppe: Akademische Forscher und Praktiker}
-\textit{- Zeitrahmen: Repräsentative Quellen der letzten Jahre}"}
+\textit{- Zeitrahmen: Repräsentative Quellen der letzten Jahre}}
 \end{quote}
 
 \subsection*{A.2 KI-Assistent - Concept Map Erstellung}
